--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,15 +13,20 @@
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^1.1.3",
     "firebase": "^9.13.0",
+    "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "moment": "^2.29.4",
+    "npm": "^8.19.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
     "uuid": "^9.0.0",
