--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "firebase": "^9.13.0",
     "font-awesome": "^4.7.0",
     "install": "^0.13.0",
     "moment": "^2.29.4",
     "npm": "^8.19.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.6.0",
@@ -26,6 +28,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-social-icons": "^5.15.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
