--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "file-saver": "^2.0.5",
     "firebase": "^9.13.0",
     "font-awesome": "^4.7.0",
     "install": "^0.13.0",
