--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "emoji-picker-react": "^4.4.4",
     "file-saver": "^2.0.5",
     "firebase": "^9.13.0",
     "font-awesome": "^4.7.0",
@@ -33,6 +34,7 @@
     "react-social-icons": "^5.15.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
+    "rn-emoji-keyboard": "^1.1.0",
     "sass": "^1.55.0",
     "uuid": "^9.0.0",
     "video-react": "^0.15.0",
